# cdecl-blocks

./: .clang-format  .gitignore  CMakeLists.txt  cdecl.c  compile_commands.json
inc/: uthash.h
inc/cdecl/: cdgram.h  cdlex.h  string.h
inc/vec/: vec.h
src/: cdecl.c  cdgram.c  cdlex.c  string.c  vec.c
